--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "asterisk-manager": "^0.2.0"
+    "asterisk-manager": "^0.2.0",
+    "dotenv": "^16.3.1"
   }
 }
