--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "asterisk-manager": "^0.2.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "net": "^1.0.2"
   }
 }
